# ktx-mcp

./: .cursorignore  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  server.json
.cursor/rules/: tago-api-only-data.mdc
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEMAND_RESEARCH.md  KTX_MCP_SPEC.md  PRICING.md  README.md  ROADMAP.md  SETUP.md  TRAFFIC.md
docs/engineering/: architecture.md  contributing.md  traffic.md
docs/getting-started/: deploy.md  env.template  setup.md
docs/legal/: .gitkeep  README.md  compliance.md  evidence.md
docs/planning/: demand-research.md  roadmap.md  spec.md
docs/product/: demo-queries.md  pricing.md  tools.md
docs/prompts/: DEMO_QUERIES.md
scripts/: build_stations.py  db_setup.py  fetch_korail_ktx_lines.py  kr-registry-scan.ps1  list_regional_stations.py  run_sync.py  seed_sync_routes.py  smoke_tago.py
skills/ktx-trip-research/: SKILL.md
src/ktx_mcp/: __init__.py  config.py  env_util.py  server.py
src/ktx_mcp/adapters/: __init__.py  tago.py  tago_client.py
src/ktx_mcp/data/: korail_lines_loader.py  ktx_line_stations.json  priority_station_codes.json  priority_stations_loader.py  station_aliases.json  station_aliases_loader.py  stations_i18n.json
supabase/migrations/: 001_train_departures.sql
tests/: test_datetime_kst.py  test_http_routes.py  test_postgres_store.py  test_stations.py  test_sync_routes.py  test_sync_worker.py  test_tago_client.py  test_trains.py
tests/fixtures/: tago_cities.json  tago_stations_seoul.json
(+17 files in other folders)
